--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-graphql": "^0.12.0",
     "graphiql": "^1.2.1",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.9"
   }
 }
