--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Dioris-cpu/booksGraphql#readme",
   "dependencies": {
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphiql": "^1.2.1",
